gcc/testsuite/gdc.test/compilable/test19540.d
alias inst = templ!();
template templ(T = typeof(new class {})) {}
