gcc/testsuite/gdc.test/fail_compilation/fail239.d
class F { int x; }
alias typeof(F).x b;
